SERVER-24127 validate max size of capped collection